# dvbapp2

./: configure.ac  pyproject.toml  sonar-project.properties
.github/workflows/: SonarCloud.yml  updatepot.yml
data/: menu.xml  menuspa.xml  setup.xml  unicable.xml
data/display220/: skin_display.xml  skin_display_picon.xml
lib/dvb/: dvb.cpp  frontend.cpp  scan.cpp  scan.h  sec.cpp  streamserver.cpp
lib/gui/: elistbox.cpp
lib/python/: Navigation.py  RecordTimer.py  StartEnigma.py  skin.py
lib/python/Components/: HdmiCec.py  International.py  NimManager.py  RecordingConfig.py  SystemInfo.py  Timeshift.py  UsageConfig.py
lib/python/Plugins/: Makefile.am  Plugin.py
lib/python/Plugins/SkinComponents/WeatherComponent/Components/: Makefile.am
lib/python/Plugins/SkinComponents/WeatherComponent/Components/Converter/: MSNWeather.py
lib/python/Plugins/SkinComponents/WeatherComponent/Components/Sources/: MSNWeather.py
lib/python/Plugins/SkinComponents/WeatherComponent/Components/meta/: Makefile.am  plugin_weathercomponent.xml
lib/python/Screens/: AudioSelection.py  AutoDiseqc.py  ButtonSetup.py  ChannelSelection.py  Console.py  DeviceManager.py  EpgSelection.py  InfoBar.py  InfoBarGenerics.py  Information.py  (+11 more)
lib/service/: servicedvb.cpp
po/: ar.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en.po  en_AU.po  en_GB.po  enigma2.pot  es.po  et.po  fa.po  fi.po  fr.po  fy.po  he.po  hr.po  hu.po  id.po  is.po  it.po  ku.po  lt.po  lv.po  nb.po  nl.po  nn.po  pl.po  pt.po  pt_BR.po  ro.po  ru.po  sk.po  sl.po  sq.po  sr.po  sv.po  ta.po  (+6 more)
tools/: enigma2.sh.in
(+7 files in other folders)
